Align viewer and table correctly with the rest of the page

--- a/modules/bim/app/assets/stylesheets/bim/ifc_viewer/generic.sass
+++ b/modules/bim/app/assets/stylesheets/bim/ifc_viewer/generic.sass
@@ -15,11 +15,7 @@
 .controller-bim\/ifc_models\/ifc_models
   overflow: hidden
 
-  &.action-show,
-  &.action-defaults
-    #content-wrapper
-      padding: 10px 20px 20px 20px
-
+  &.action-show
     #content
       height: 100%
 
